syntax="proto3";

option go_package="go-boilerplate/internal/authors";

service AuthorService {
  rpc GetAuthors(GetAuthorsRequest) returns (GetAuthorsResponse);
}

message GetAuthorsRequest {
  string name = 1;
}

message GetAuthorsResponse {
  repeated Author data = 1;
  string message = 2;
}

message Author {
  string id = 1;
  string name = 2;
}
